syntax = "proto3";

package rivet.backend.pkg.nomad.msg.monitor_alloc_plan;

import "proto/common.proto";

/// name = "msg-nomad-monitor-alloc-plan"
/// parameters = [
/// 	{ name = "dispatched_job_id" },
/// ]
message Message {
	string dispatched_job_id = 1;
	string payload_json = 2;
}
